--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
 
+    //implementation 'com.android.support.constraint:constraint-layout:2.0.0-alpha5'
     // design
     implementation "com.google.android.material:material:1.2.0-alpha01"
     implementation 'androidx.navigation:navigation-fragment:2.1.0'
