--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation "com.google.android.gms:play-services-location:17.0.0"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+
+    implementation 'com.afollestad:vvalidator:0.2.2'
 }
