--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,35 @@ local.properties
 .gradle/5.4.1/fileHashes/
 
 .gradle/buildOutputCleanup/
+
+build/intermediates/lint-cache/maven.google/androidx/appcompat/group-index.xml
+
+build/intermediates/lint-cache/maven.google/androidx/constraintlayout/group-index.xml
+
+build/intermediates/lint-cache/maven.google/androidx/core/group-index.xml
+
+build/intermediates/lint-cache/maven.google/androidx/gridlayout/group-index.xml
+
+build/intermediates/lint-cache/maven.google/androidx/legacy/group-index.xml
+
+build/intermediates/lint-cache/maven.google/androidx/lifecycle/group-index.xml
+
+build/intermediates/lint-cache/maven.google/androidx/navigation/group-index.xml
+
+build/intermediates/lint-cache/maven.google/androidx/preference/group-index.xml
+
+build/intermediates/lint-cache/maven.google/androidx/recyclerview/group-index.xml
+
+build/intermediates/lint-cache/maven.google/androidx/test/espresso/group-index.xml
+
+build/intermediates/lint-cache/maven.google/androidx/test/ext/group-index.xml
+
+build/intermediates/lint-cache/maven.google/com/android/support/constraint/group-index.xml
+
+build/intermediates/lint-cache/maven.google/com/google/android/gms/group-index.xml
+
+build/intermediates/lint-cache/maven.google/com/google/android/material/group-index.xml
+
+build/intermediates/lint-cache/maven.google/master-index.xml
+
+build/intermediates/lint-cache/sdk-registry.xml/sdk-registry.xml
