--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
              sign the APK for publishing.
              You can define the keys for the debug and release targets in src/debug/ and src/release/.
         -->
-        <receiver android:name="MainActivity" >
+        <receiver android:name="MainAppActivity" >
         </receiver>
         <meta-data
             android:name="com.google.android.geo.API_KEY"
